loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:5: error: '(' expected but identifier found.
while estSurBiscuit == false 
      ^